# onl_st

./: .gitignore  README.md  article_fixture.json  catalog.json  category_fixture.json  groups.json  product_fixture.json  product_fixture_.json  pyproject.toml
blog/: models.py  urls.py
blogs/: admin.py  forms.py  models.py  urls.py  views.py
blogs/management/commands/: add_article.py
blogs/migrations/: 0001_initial.py  0002_article_owner.py  0003_alter_article_owner.py
blogs/templates/blogs/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  base.html
blogs/templates/blogs/includs/: inc_menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_product.py
catalog/migrations/: 0001_initial.py  0002_product_is_published.py  0002_remove_product_quantity_product_created_at_and_more.py  0003_alter_product_options.py  0004_product_owner.py  0005_alter_product_is_published.py
catalog/templates/: base.html  product_detail.html  products_list.html
catalog/templates/catalog/: base.html  product_category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includs/: categories_menu.html  inc_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
